Update GitHub Actions workflow to use Ubuntu 24.04 and Clang 18

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -9,22 +9,22 @@ on:
 jobs:
   build_ubuntu:
     name: Build Linux x86_64
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - name: Check out repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           path: tdlib
 
       - name: Build TDLib
         env:
           CXXFLAGS: "-stdlib=libc++"
-          CC: "/usr/bin/clang-14"
-          CXX: "/usr/bin/clang++-14"
+          CC: "/usr/bin/clang-18"
+          CXX: "/usr/bin/clang++-18"
         run: |
           sudo apt-get install make zlib1g-dev libssl-dev gperf php-cli cmake clang-14 libc++-dev libc++abi-dev
           mkdir build
-          cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX:PATH=../tdlib -DTD_ENABLE_LTO=ON -DCMAKE_AR=/usr/bin/llvm-ar-14 -DCMAKE_NM=/usr/bin/llvm-nm-14 -DCMAKE_OBJDUMP=/usr/bin/llvm-objdump-14 -DCMAKE_RANLIB=/usr/bin/llvm-ranlib-14  -S ./tdlib -B ./build
+          cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX:PATH=../tdlib -DTD_ENABLE_LTO=ON -DCMAKE_AR=/usr/bin/llvm-ar-18 -DCMAKE_NM=/usr/bin/llvm-nm-18 -DCMAKE_OBJDUMP=/usr/bin/llvm-objdump-18 -DCMAKE_RANLIB=/usr/bin/llvm-ranlib-18 -S ./tdlib -B ./build
           cmake --build ./build --target tdjson --parallel 2
           strip --strip-all ./build/libtdjson.so.*
           mv -v ./build/libtdjson.so.* ./build/libtdjson_linux_amd64.so
